Improve practice flow and game forfeits
